--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,14 +1,14 @@
 <div class="page" >
-	<ng-container *ngIf="vkService.loading">
+	<ng-container *ngIf="loading">
 		loading
 	</ng-container>
-	<ng-container *ngIf="vkService.error">
-		error
+	<ng-container *ngIf="needLogin">
+		<button type="button" class="btn btn-primary" (click)="handleLogin()">Log In</button>
 	</ng-container>
-	<ng-container *ngIf="vkService.connected">
-		main works!
-	</ng-container>
-	<ng-container *ngIf="vkService.connected">
-		main works!
-	</ng-container>
+	<div *ngIf="profile">
+		<img src={{profile.avatarUrl}} />
+		<span>{{profile.name}}</span>
+		<button type="button" class="btn btn-primary" (click)="handleLogout()">Log Out</button>
+		<app-photos></app-photos>
+	</div>
 </div>
