--- a/src/app/photos/photos.component.html
+++ b/src/app/photos/photos.component.html
@@ -1,3 +1,6 @@
-<p>
-  photos works!
-</p>
+<ng-container *ngIf="photo">
+	<div class="photo-wrapper">
+		<img src={{photo.sizes[0].url}}/>
+		<p>{{photo.text}}</p>
+	</div>
+</ng-container>
