--- a/src/app/photo/photo.component.html
+++ b/src/app/photo/photo.component.html
@@ -1,4 +1,3 @@
-<div class="photo-container card m-3 d-flex justify-content-center align-items-center" (click)="handleClick()">
-	<img src={{photo.sizes[0].url}} class="m-3"/>
-	<p>{{photo.text}}</p>
+<div class="photo-container card m-3 p-3" (click)="handleClick()">
+	<img src={{photo.sizes[0].url}} class="rounded"/>
 </div>
