--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,19 +1,5 @@
 @import '~bootstrap/scss/bootstrap';
 
-.loader {
-  width: 45px;
-  height: 45px;
+.avatar {
   border-radius: 100%;
-  background-color: $green;
-  animation: bounce 1s ease-in-out infinite;
-}
-
-@keyframes bounce {
-  0%, 100% {
-    transform: scale(0.5);
-  }
-
-  50% {
-    transform: scale(1.0);
-  }
 }
