--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,12 +2,30 @@
 @import '~bootstrap/scss/bootstrap';
 
 .page {
-	width: 100%;
-	height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 html, body {
-	@extend .page;
+  @extend .page;
+}
+
+.loader {
+  width: 45px;
+  height: 45px;
+  border-radius: 100%;
+  background-color: $green;
+  animation: bounce 1s ease-in-out infinite;
+}
+
+@keyframes bounce {
+  0%, 100% {
+    transform: scale(0.5);
+  }
+
+  50% {
+    transform: scale(1.0);
+  }
 }
 
 //div {
