--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,13 @@
 @import "~normalize.css";
 @import '~bootstrap/scss/bootstrap';
 
-.page {
+html, body {
   width: 100%;
   height: 100%;
 }
 
-html, body {
-  @extend .page;
+body {
+  display: flex;
 }
 
 .loader {
