--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -18,6 +18,6 @@
 			<hr class="m-0 p-0"/>
 			<button type="button" class="btn btn-success m-3" (click)="handleLogout()">Log Out</button>
 		</div>
-		<app-photos class="flex-fill d-flex"></app-photos>
+		<app-photos class="flex-fill d-flex" [profile]="profile"></app-photos>
 	</div>
 </ng-template>
